feat: :tada: Actualizacion de titulos
Actualice titulos y los centre

--- a/EskeletoHtml-main/index.html
+++ b/EskeletoHtml-main/index.html
@@ -7,20 +7,14 @@
     <link rel="stylesheet" href="css/fuentes.css">
     <title>Departamentos de colombia</title>
 </head>
-<body 
-    <font class="roboto-light">
-        <div>
-            <h2>MAPA DE COLOMBIA Y SUS DEPARTAMENTOS</h2> 
-            <div class="mapa">
-                <img src="images/mapaColombia2.png" alt="mapaColom"><br>
-            </div>
-        </div>    
+<body>
+    <h1> MAPA DE COLOMBIA Y SUS DEPARTAMENTOS </h1>
+    <div class="contenedor" >Colombia es un país situado en el noroeste de América del Sur, conocido por su biodiversidad y su geografía variada que incluye montañas andinas, selvas amazónicas y costas en el Caribe y el Pacífico. Su capital es Bogotá, una ciudad ubicada en el altiplano andino. Colombia tiene una rica historia cultural, influenciada por sus raíces indígenas, africanas y europeas, y es famosa por su música, como la cumbia y el vallenato, así como por su café, uno de los más apreciados en el mundo.
+    </div>
+<img src="images/mapacolombia3-removebg.png" alt="mapaCol"
 
 
 
 
-
-
-    </font>
-    </body>
-    </html>
+</body>
+</html>
