--- a/EskeletoHtml-main/index.html
+++ b/EskeletoHtml-main/index.html
@@ -8,10 +8,20 @@
     <title>Departamentos de colombia</title>
 </head>
 <body>
-    <h1> MAPA DE COLOMBIA Y SUS DEPARTAMENTOS </h1>
-    <div class="contenedor" >Colombia es un país situado en el noroeste de América del Sur, conocido por su biodiversidad y su geografía variada que incluye montañas andinas, selvas amazónicas y costas en el Caribe y el Pacífico. Su capital es Bogotá, una ciudad ubicada en el altiplano andino. Colombia tiene una rica historia cultural, influenciada por sus raíces indígenas, africanas y europeas, y es famosa por su música, como la cumbia y el vallenato, así como por su café, uno de los más apreciados en el mundo.
-    </div>
-<img src="images/mapacolombia3-removebg.png" alt="mapaCol"
+        <h1 class="titulo"> MAPA DE COLOMBIA Y SUS DEPARTAMENTOS</h1>
+        <div class="contenedor" >
+            <h3 class="roboto-light">
+                Colombia es un país situado en el noroeste de América del Sur, conocido por su biodiversidad y su geografía variada que incluye montañas andinas, selvas amazónicas y costas en el Caribe y el Pacífico. Su capital es Bogotá, una ciudad ubicada en el altiplano andino. Colombia tiene una rica historia cultural, influenciada por sus raíces indígenas, africanas y europeas, y es famosa por su música, como la cumbia y el vallenato, así como por su café, uno de los más apreciados en el mundo.
+            </h3>   
+        </div>
+                <div class="mapa">
+                    <img src="images/mapacolombia3-removebg.png" alt="mapaCol">
+                </div>
+
+
+
+
+
 
 
 
