feat: :sparkles: Nuevas Paginas
Se implemento nuevas paginas y informacion dentro de ellas

--- a/EskeletoHtml-main/pages/amazonas.html
+++ b/EskeletoHtml-main/pages/amazonas.html
@@ -3,25 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/fuentes.css">
-    <title>Departamento Del Amazonas</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fuentes.css">
+    <title>Amazonas</title>
 </head>
 <body>
+    <a class="regresar" href="../index.html">Volver al incio</a>
+    <h1 class="titulo2"> Bienvenidos al departamento del amazonas </h1>
     <div class="textoAma">
-        <h1 class="titulo">Bienvenidos al departamento del amazonas</h1>
+        <div>
+            <img src="../images/depAmazonas.png">
+        </div>
         <div class="contenedor2">
             <h3 class="roboto-light">
-                Amazonas es uno de los treinta y dos departamentos que forman la República de Colombia. Su capital es Leticia. Está ubicado en el extremo sur del país, en gran parte al sur de la línea ecuatorial, en la región Amazonia. Con 110 000 km² es el departamento más extenso de Colombia, con unos 83 808 habitantes en 2023, el cuarto menos poblado por delante de San Andrés y Providencia, Guainía y Vaupés, el menos poblado— y con 0.76 Hab/km², el tercero menos densamente poblado, por delante de Vichada y Guainía, el menos densamente poblado.
-            </h3>
+                Amazonas es el departamento más extenso de Colombia, con una superficie de aproximadamente 110,000 km², pero también es uno de los menos poblados, con unos 83,808 habitantes en 2023. Se encuentra en el extremo sur del país, en la región de la Amazonia, limitando con Brasil y Perú, y es conocido por su vasta selva tropical, que forma parte de la cuenca del río Amazonas, uno de los sistemas fluviales más importantes y biodiversos del mundo.
+            </h3>   
         </div>
-                <div class="mapaAma">
-                    <img src="../images/depAmazonas.png"
-    </div>  </div>           
-
-
-
-
-
+    </div>
+<h1 class="titulo2">Capital (LETICIA)</h1>    
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            Su capital es Leticia, una ciudad ubicada en la triple frontera entre Colombia, Brasil y Perú. Leticia es un importante centro turístico y económico de la región, además de ser la única ciudad con infraestructura significativa. Otras áreas pobladas son pequeñas localidades y comunidades indígenas dispersas a lo largo de los ríos.
+        </h3>
+    </div>
+    <div>
+        <img src="../images/capitalAma.jpeg">
+    </div>
+</div>
+<h1 class="titulo2">Cultura y poblacion indigena</h1>
+<div class="textoAma">
+    <div>
+        <img src="../images/culturaAma.webp">
+    </div>
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            El Amazonas alberga diversas comunidades indígenas, como los Ticuna, Yagua, y Huitoto, quienes tienen un profundo conocimiento del entorno natural y mantienen tradiciones ancestrales. Estas comunidades juegan un papel clave en la preservación del patrimonio cultural y ecológico del departamento.
+        </h3>
+    </div>
+</div>
+<h1 class="titulo2">Turismo</h1>
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            El turismo es uno de los sectores económicos más importantes del departamento. Los visitantes pueden explorar la selva amazónica, realizar excursiones fluviales por el río Amazonas, y participar en actividades como la observación de fauna (delfines, aves, monos, etc.) y la visita a comunidades indígenas para conocer sus costumbres y tradiciones.
+        </h3>
+    </div>
+    <div class="imgturismo">
+        <img src="../images/turismoAma2.png">
+    </div>
+</div>
 </body>
 </html>
