--- a/EskeletoHtml-main/pages/meta.html
+++ b/EskeletoHtml-main/pages/meta.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departamento Del Meta</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fuentes.css">
+    <title>Meta</title>
 </head>
 <body>
-    
+    <h1 class="titulo4"> Bienvenidos al departamento del Meta</h1>
+    <div class="textoAma">
+        <div>
+            <img src="../images/depMeta.png">
+        </div>
+        <div class="contenedor2">
+            <h3 class="roboto-light">   
+                El Meta es un departamento de Colombia ubicado en la región de los Llanos Orientales, caracterizado por sus extensas sabanas, montañas y ríos. Tiene una superficie de aproximadamente 85,635 km² y una población de más de 1 millón de habitantes.
+            </h3>   
+        </div>
+    </div>
+<h1 class="titulo4">Capital (VILLAVICENCIO)</h1>    
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            Su capital es Villavicencio, una de las ciudades más importantes de los Llanos Orientales de Colombia. Conocida como la "Puerta de los Llanos", se encuentra a aproximadamente 90 kilómetros al sureste de Bogotá, lo que la convierte en un punto de acceso estratégico entre la capital colombiana y la región llanera.
+        </h3>
+    </div>
+    <div>
+        <img src="../images/villavicencio3.jpg">
+    </div>
+</div>
+<h1 class="titulo4">Cultura</h1>
+<div class="textoAma">
+    <div>
+        <img src="../images/culturaMeta.jpg">
+    </div>
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            El Meta es un centro importante de la cultura llanera, que tiene profundas raíces en las tradiciones ganaderas y la vida en el campo. La música joropo, las competencias de coleo, y las festividades tradicionales son parte integral de la identidad cultural del Meta. En Villavicencio se celebran eventos como el Torneo Internacional del Joropo, que atrae a visitantes y artistas de toda la región.
+        </h3>
+    </div>
+</div>
+<h1 class="titulo4">Turismo</h1>
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            El turismo en el Meta ha crecido gracias a sus paisajes naturales únicos. Aparte de <strong>caño Cristales</strong>, el departamento cuenta con atractivos como el <strong>Parque Nacional Natural Sierra de La Macarena</strong>, la <strong>Reserva Natural de Lagos de Menegua</strong>, y <strong>los ríos y cascadas de Cubarral.</strong> El ecoturismo es una actividad cada vez más popular en la región, que ofrece experiencias cercanas a la naturaleza.
+        </h3>
+    </div>
+    <div class="imgturismo">
+        <img src="../images/turismoMeta.png">
+    </div>
+</div>
 </body>
 </html>
