--- a/EskeletoHtml-main/pages/santander.html
+++ b/EskeletoHtml-main/pages/santander.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departamento De Santander</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fuentes.css">
+    <title>Santander</title>
 </head>
 <body>
-    
+    <h1 class="titulo5"> Bienvenidos al departamento de Santander</h1>
+    <div class="textoAma">
+        <div>
+            <img src="../images/depSant4.png">
+        </div>
+        <div class="contenedor2">
+            <h3 class="roboto-light">   
+                El departamento de Santander es una región situada en el noreste de Colombia, conocida por su diversidad geográfica, cultural e histórica. Limita al norte con el mar Caribe, al este con Norte de Santander, al sur con Boyacá y al oeste con Antioquia.
+            </h3>   
+        </div>
+    </div>
+<h1 class="titulo5">Capital (BUCARAMANGA)</h1>    
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            Su capital es Bucaramanga, se ubica en la región nororiental del país. Conocida como la "Ciudad Bonita" por su clima agradable y sus paisajes, Bucaramanga está situada a aproximadamente 400 metros sobre el nivel del mar y tiene una población de alrededor de 600,000 habitantes.
+        </h3>
+    </div>
+    <div>
+        <img src="../images/bucaramanga2.jpg">
+    </div>
+</div>
+<h1 class="titulo5">Cultura</h1>
+<div class="textoAma">
+    <div>
+        <img src="../images/culturabug3.jpg">
+    </div>
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            La cultura santandereana es rica y diversa, con influencias indígenas, españolas y africanas. La región es famosa por sus tradiciones en la música, especialmente el joropo y la banda. Las festividades, como la Feria Bonita en Bucaramanga, celebran la cultura local y atraen a visitantes de todo el país. Además, Santander es conocido por su gastronomía, que incluye platos típicos como la bandeja paisa y el arequipe.
+        </h3>
+    </div>
+</div>
+<h1 class="titulo5">Turismo</h1>
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            El departamento ofrece numerosos atractivos turísticos, entre los que destacan:<br>
+
+            <br><strong>★Cañón del Chicamocha:</strong> Un impresionante cañón que ofrece actividades de aventura como parapente y senderismo.<br>
+            <br><strong>★Parque Nacional del Chicamocha:</strong> Ideal para los amantes de la naturaleza, con vistas panorámicas y opciones de ecoturismo.<br>
+            <br><strong>★Barichara:</strong> Considerado uno de los pueblos más bellos de Colombia, con calles empedradas y arquitectura colonial.<br>
+            <br><strong>★Gámbita:</strong> Conocido por su paisaje montañoso y su producción de café.
+        </h3>
+    </div>
+    <div class="imgturismo">
+        <img src="../images/turismoSant.png">
+    </div>
+</div>
 </body>
 </html>
