--- a/EskeletoHtml-main/pages/vichada.html
+++ b/EskeletoHtml-main/pages/vichada.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departamento Del Vichada</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fuentes.css">
+    <title>Vichada</title>
 </head>
 <body>
-    
+    <h1 class="titulo6"> Bienvenidos al departamento del Vichada</h1>
+    <div class="textoAma">
+        <div>
+            <img src="../images/depVicha.png">
+        </div>
+        <div class="contenedor2">
+            <h3 class="roboto-light">   
+                El departamento de Vichada es una región ubicada en el este de Colombia, limitando al norte con el departamento de Meta, al sur con Amazonas, al este con Vaupés, y al oeste con Casanare. Es uno de los departamentos menos poblados del país, con una población que no supera los 100,000 habitantes y una superficie de aproximadamente 100,000 km², lo que lo convierte en uno de los más extensos de Colombia.
+            </h3>   
+        </div>
+    </div>
+<h1 class="titulo6">Capital (PUERTO CARREÑO)</h1>    
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            La capital del departamento de Vichada es Puerto Carreño. Esta ciudad se encuentra situada a orillas del río Orinoco, cerca de la frontera con Venezuela. Puerto Carreño es un importante centro administrativo y comercial de la región, y se destaca por su papel en la conexión entre Colombia y Venezuela, así como por su proximidad a diversas rutas fluviales. Además, es conocida por su riqueza natural y su biodiversidad, ofreciendo acceso a paisajes llaneros y ecosistemas diversos.
+        </h3>
+    </div>
+    <div>
+        <img src="../images/puertoCarreño3.jpg">
+    </div>
+</div>
+<h1 class="titulo6">Cultura</h1>
+<div class="textoAma">
+    <div>
+        <img src="../images/culturaVicha4.jpg">
+    </div>
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            La cultura en Vichada es diversa, influenciada por las comunidades indígenas, que representan una parte importante de la población, así como por la mezcla de tradiciones de colonos y habitantes de otras regiones. Las comunidades indígenas, como los <strong>Piapoco</strong> y <strong>Sikuani</strong>, mantienen sus tradiciones, lenguas y costumbres vivas, lo que enriquece el patrimonio cultural de la región.
+        </h3>
+    </div>
+</div>
+<h1 class="titulo6">Turismo</h1>
+<div class="textoAma">
+    <div class="contenedor">
+        <h3 class="roboto-light">
+            A pesar de ser menos desarrollado, el turismo en Vichada tiene un gran potencial, especialmente en el ecoturismo. Las atracciones naturales, como los ríos y la fauna silvestre, ofrecen oportunidades para el avistamiento de aves, pesca y exploración de la naturaleza. <strong>Parque Nacional Natural El Tuparro</strong> es uno de los principales destinos turísticos, famoso por su biodiversidad y paisajes impresionantes.
+        </h3>
+    </div>
+    <div class="imgturismo">
+        <img src="../images/turismoVicha3.jpeg">
+    </div>
+</div>
 </body>
 </html>
