feat: :rocket: Se implemento lo que hacia falta
Proyecto Finalizado

--- a/EskeletoHtml-main/pages/amazonas.html
+++ b/EskeletoHtml-main/pages/amazonas.html
@@ -8,8 +8,8 @@
     <title>Amazonas</title>
 </head>
 <body>
-    <a class="regresar" href="../index.html">Volver al incio</a>
-    <h1 class="titulo2"> Bienvenidos al departamento del amazonas </h1>
+
+    <h1 class="titulo2"> Bienvenidos al departamento del amazonas <a class="regresar" href="../index.html">Volver al incio</a></h1>
     <div class="textoAma">
         <div>
             <img src="../images/depAmazonas.png">
