--- a/EskeletoHtml-main/pages/antioquia.html
+++ b/EskeletoHtml-main/pages/antioquia.html
@@ -8,7 +8,7 @@
     <title>Antioquia</title>
 </head>
 <body>
-    <h1 class="titulo3"> Bienvenidos al departamento de Antioquia</h1>
+    <h1 class="titulo3"> Bienvenidos al departamento de Antioquia <a class="regresar" href="../index.html">Volver al incio</a></h1>
     <div class="textoAma">
         <div>
             <img src="../images/mapaAntio2.png">
