--- a/EskeletoHtml-main/pages/vichada.html
+++ b/EskeletoHtml-main/pages/vichada.html
@@ -8,7 +8,7 @@
     <title>Vichada</title>
 </head>
 <body>
-    <h1 class="titulo6"> Bienvenidos al departamento del Vichada</h1>
+    <h1 class="titulo6"> Bienvenidos al departamento del Vichada <a class="atras" href="../index.html">Volver al incio</a></h1>
     <div class="textoAma">
         <div>
             <img src="../images/depVicha.png">
